docs: refresh ./docs end-to-end (7 files)
Audited the docs against the current 64-command CLI surface and
post-v1.1.0 master state, then refreshed each file in parallel.

- cli-commands.md: added 23 missing commands (alert, benchmark, buffers,
  ci, classleak, cluster, compare, compilerqueue, events, explain,
  gclogdiff, gcrun, heapanalyze, jfranalyze, logger, mbean, perfcounter,
  sc, slowlog, spring, threaddump, trace, tui). Coverage now 64/64.
- configuration.md: added "Recent additions (v1.1.0+)" subsection,
  per-command flag tables for profile/profile-gate/flame/nmt/gclog/
  gcwhy/gcscore/doctor/suggest, env-var section (ARGUS_DEBUG, LC_ALL,
  LANG). Fixed missing --help/--version rows in global table.
- troubleshooting.md: added "CLI Diagnostic Errors" section with 6
  scenarios surfaced this cycle (NMT not enabled, asprof event
  unsupported, lock-event zero samples, gcscore arg validation,
  attach-not-ready race, stale-jar File-not-found).
- benchmark-report.md: added "Profiling Overhead" + "When to Use Each
  Mode" sections covering argus profile / profile-gate / pool / cluster.
  Existing throughput numbers preserved with explicit footnote citing
  the commit they were captured at (the harness needs a live JVM, not
  re-run here).
- architecture.md: appended "Post-1.1.0 Additions (master)" section
  documenting the seven architectural changes since the v1.1.0 tag
  (live GC counters, GcPressureRule, NMT --diff renderer, AsProf flame
  fix + capabilities, GcWhy heap correlation, GcScore live PID,
  GcLog aggregated summary). v1.0.0 / v1.1.0 sections untouched.
- kubernetes.md: bumped v0.9.0 → 1.1.0; updated container image to
  ghcr.io/rlaope/argus:1.1.0 and JAR path to /opt/argus/argus-cli.jar
  (matches Dockerfile + .github/workflows/docker.yml).
- README.md: rebuilt the docs index — now lists all 12 files across 5
  sections (Getting Started / Reference / Operations / Studies /
  Reference Assets), including the new comparison-argus-vs-traditional
  d